--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-country-explorer",
+  "name": "gemini-chatbot-clone",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.0",
-    "axios": "^1.6.7",
-    "framer-motion": "^12.23.0",
+    "@hookform/resolvers": "^3.3.4",
+    "framer-motion": "^12.23.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.0",
